# chip8_emulator

./: Cargo.toml  imgui.ini
resources/: shader.wgsl
src/: emulator.rs  main.rs
