[package]
name = "chip_8_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
wgpu = "0.14.2"
env_logger = "0.10.0"
pollster = "0.2.5"
bytemuck = { version = "1.12.3", features = ["derive"]}
imgui = {versin = "0.9.0", features = ["tables-api"]}
imgui-wgpu = "0.21.0"
imgui-winit-support = "0.9.0"
rand = "0.8.5"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]
